--- a/v0/book/config.yaml
+++ b/v0/book/config.yaml
@@ -94,6 +94,10 @@ tableOfContents:
           - page: advanced-development/core-classes/controller
           - page: advanced-development/core-classes/router
           - page: advanced-development/core-classes/permissions
+      - page: advanced-development/hooks
+        children:
+          - page: advanced-development/hooks/introduction
+          - page: advanced-development/hooks/events
       - page: advanced-development/miscellaneous
         children:
           - page: advanced-development/miscellaneous/dashboard
