--- a/v0/book/config.yaml
+++ b/v0/book/config.yaml
@@ -1,5 +1,8 @@
 homePage: home
 redirects:
+  download-and-install:
+    newPage: install
+    code: 301
   some-old-page:
     newPage: some-new-page
     code: 301
@@ -19,7 +22,7 @@ tableOfContents:
             icon: fas fa-handshake-angle
           - page: licenses
             icon: fas fa-stamp
-  - page: download-and-install
+  - page: install
     icon: fas fa-download
     prev: features
     next: create-first-app
@@ -29,7 +32,7 @@ tableOfContents:
     icon: fas fa-terminal
   - page: create-first-app
     icon: fas fa-star
-    prev: download-and-install
+    prev: install
     next: basics/about-apps
     children:
       - page: basics/about-apps
