added configuration parameters for php hubleto init

--- a/v0/book/config.yaml
+++ b/v0/book/config.yaml
@@ -30,6 +30,8 @@ tableOfContents:
       - page: nginx
   - page: cli-agent
     icon: fas fa-terminal
+    children:
+      - page: cli/init
   - page: create-first-app
     icon: fas fa-star
     prev: install
