--- a/v0/book/config.yaml
+++ b/v0/book/config.yaml
@@ -12,8 +12,8 @@ tableOfContents:
     icon: fas fa-home
     children:
       - page: about
-        children:
-          - page: benefits
+        # children:
+        #   - page: benefits
       - page: join-us
       #   children:
       #     - page: contribute
@@ -52,6 +52,7 @@ tableOfContents:
       - page: docs/models
         children:
           - page: docs/models/columns
+          - page: docs/models/data-transfer-objects
           - page: docs/models/description-api
           - page: docs/models/relations
           - page: docs/models/record-manager
