--- a/v0/book/config.yaml
+++ b/v0/book/config.yaml
@@ -1,7 +1,10 @@
 homePage: home
 redirects:
   download-and-install:
-    newPage: install
+    newPage: getting-started
+    code: 301
+  install:
+    newPage: getting-started
     code: 301
   some-old-page:
     newPage: some-new-page
@@ -22,7 +25,7 @@ tableOfContents:
       #       icon: fas fa-handshake-angle
       #     - page: licenses
       #       icon: fas fa-stamp
-  - page: install
+  - page: getting-started
     icon: fas fa-download
     prev: features
     next: create-first-app
@@ -32,6 +35,78 @@ tableOfContents:
     icon: fas fa-terminal
     children:
       - page: cli/init
+  - page: apps
+    icon: fas fa-bolt
+    children:
+      - page: apps/community
+        children:
+          # - page: apps/community/billing
+          #   children:
+          #     - page: apps/community/billing/models/billing-account
+          #     - page: apps/community/billing/models/billing-account-service
+          #     - page: apps/community/billing/controllers/billing-accounts
+          #     - page: apps/community/billing/views/billing-accounts
+          #     - page: apps/community/billing/components/table-billing-account-services
+          - page: apps/community/customers
+            children:
+              - page: apps/community/customers/models/activity
+              - page: apps/community/customers/models/address
+              - page: apps/community/customers/models/company
+              - page: apps/community/customers/models/company-tag
+              - page: apps/community/customers/models/company-activity
+              - page: apps/community/customers/models/company-document
+              - page: apps/community/customers/models/contact
+              - page: apps/community/customers/models/person-tag
+              - page: apps/community/customers/models/person
+              - page: apps/community/customers/permissions
+          - page: apps/community/documents
+            children:
+              - page: apps/community/documents/models/document
+              - page: apps/community/documents/permissions
+          - page: apps/community/services
+            children:
+              - page: apps/community/services/models/service
+              - page: apps/community/services/permissions
+          - page: apps/community/settings
+            children:
+              - page: apps/community/settings/models/activity-type
+              - page: apps/community/settings/models/country
+              - page: apps/community/settings/models/currency
+              - page: apps/community/settings/models/label
+              - page: apps/community/settings/models/pipeline
+              - page: apps/community/settings/models/pipeline-step
+              - page: apps/community/settings/models/lead-status
+              - page: apps/community/settings/models/deal-status
+              - page: apps/community/settings/models/profile
+              - page: apps/community/settings/models/permission
+              - page: apps/community/settings/models/role-permission
+              - page: apps/community/settings/models/setting
+              - page: apps/community/settings/models/tag
+              - page: apps/community/settings/models/contact-type
+              - page: apps/community/settings/models/user
+              - page: apps/community/settings/models/user-role
+              - page: apps/community/settings/models/user-has-role
+              - page: apps/community/settings/permissions
+          - page: apps/community/deals
+            children:
+              - page: apps/community/deals/models/deal
+              - page: apps/community/deals/models/deal-label
+              - page: apps/community/deals/models/deal-history
+              - page: apps/community/deals/models/deal-service
+              - page: apps/community/deals/models/deal-activity
+              - page: apps/community/deals/settings
+          - page: apps/community/leads
+            children:
+              - page: apps/community/leads/models/lead
+              - page: apps/community/leads/models/lead-label
+              - page: apps/community/leads/models/lead-history
+              - page: apps/community/leads/models/lead-service
+              - page: apps/community/leads/models/lead-activity
+          - page: apps/community/calendar
+          - page: apps/community/calendar-sync
+          - page: apps/community/report
+      - page: apps/premium
+      - page: apps/external
   - page: docs
     icon: fas fa-book
     children:
@@ -136,75 +211,3 @@ tableOfContents:
           - page: tutorial/custom-ui-components
           - page: tutorial/writing-tests
           - page: tutorial/more-reading
-  - page: apps
-    icon: fas fa-bolt
-    children:
-      - page: apps/community
-        children:
-          # - page: apps/community/billing
-          #   children:
-          #     - page: apps/community/billing/models/billing-account
-          #     - page: apps/community/billing/models/billing-account-service
-          #     - page: apps/community/billing/controllers/billing-accounts
-          #     - page: apps/community/billing/views/billing-accounts
-          #     - page: apps/community/billing/components/table-billing-account-services
-          - page: apps/community/customers
-            children:
-              - page: apps/community/customers/models/activity
-              - page: apps/community/customers/models/address
-              - page: apps/community/customers/models/company
-              - page: apps/community/customers/models/company-tag
-              - page: apps/community/customers/models/company-activity
-              - page: apps/community/customers/models/company-document
-              - page: apps/community/customers/models/contact
-              - page: apps/community/customers/models/person-tag
-              - page: apps/community/customers/models/person
-              - page: apps/community/customers/permissions
-          - page: apps/community/documents
-            children:
-              - page: apps/community/documents/models/document
-              - page: apps/community/documents/permissions
-          - page: apps/community/services
-            children:
-              - page: apps/community/services/models/service
-              - page: apps/community/services/permissions
-          - page: apps/community/settings
-            children:
-              - page: apps/community/settings/models/activity-type
-              - page: apps/community/settings/models/country
-              - page: apps/community/settings/models/currency
-              - page: apps/community/settings/models/label
-              - page: apps/community/settings/models/pipeline
-              - page: apps/community/settings/models/pipeline-step
-              - page: apps/community/settings/models/lead-status
-              - page: apps/community/settings/models/deal-status
-              - page: apps/community/settings/models/profile
-              - page: apps/community/settings/models/permission
-              - page: apps/community/settings/models/role-permission
-              - page: apps/community/settings/models/setting
-              - page: apps/community/settings/models/tag
-              - page: apps/community/settings/models/contact-type
-              - page: apps/community/settings/models/user
-              - page: apps/community/settings/models/user-role
-              - page: apps/community/settings/models/user-has-role
-              - page: apps/community/settings/permissions
-          - page: apps/community/deals
-            children:
-              - page: apps/community/deals/models/deal
-              - page: apps/community/deals/models/deal-label
-              - page: apps/community/deals/models/deal-history
-              - page: apps/community/deals/models/deal-service
-              - page: apps/community/deals/models/deal-activity
-              - page: apps/community/deals/settings
-          - page: apps/community/leads
-            children:
-              - page: apps/community/leads/models/lead
-              - page: apps/community/leads/models/lead-label
-              - page: apps/community/leads/models/lead-history
-              - page: apps/community/leads/models/lead-service
-              - page: apps/community/leads/models/lead-activity
-          - page: apps/community/calendar
-          - page: apps/community/calendar-sync
-          - page: apps/community/report
-      - page: apps/premium
-      - page: apps/external
