--- a/v0/book/config.yaml
+++ b/v0/book/config.yaml
@@ -127,10 +127,13 @@ tableOfContents:
       - page: docs/models
         children:
           - page: docs/models/columns
-          - page: docs/models/data-transfer-objects
           - page: docs/models/description-api
+          - page: docs/models/enums
+          - page: docs/models/lookups
           - page: docs/models/relations
           - page: docs/models/record-manager
+          - page: docs/models/callbacks
+          - page: docs/models/data-transfer-objects
       - page: docs/views
         children:
           - page: docs/views/namespaces
