--- a/v0/book/config.yaml
+++ b/v0/book/config.yaml
@@ -240,6 +240,7 @@ tableOfContents:
           - page: tutorial/more-reading
       - page: tutorials/set-up-environment-for-development
         icon: fas fa-gears
+      - page: tutorials/code-samples
   - page: certification
     icon: fas fa-id-badge
     children:
